# nigiri

./: .gitignore  CMakeLists.txt  README.md  modules.cmake  post.cmake  pre.cmake
include/generic/: nigiri.h  nigiri_base.h  nigiri_build.h  nigiri_foreignruntime.h  nigiri_statemachine.h
include/unix/: nigiri_unix.h
include/win32/: nigiri_win32.h
modules/jvm/: CMakeLists.txt  README.md  post.cmake  pre.cmake
modules/jvm/include/generic/: JVMEnums.h  JVMForeignRuntime.h  JVMInternalWrappers.h  JVMOpParams.h  JVMPrimitives.h  JVMThread.h  nigiri_jvm_build.h
modules/jvm/src/generic/: FRM_JVM.cpp  JVMEnums.cpp  JVMForeignRuntime.cpp  JVMPrimitives.cpp  JVMThread.cpp
modules/jvm/src/generic/primitives/: JVMType_Boolean.cpp  JVMType_Char.cpp  JVMType_Double.cpp  JVMType_Float.cpp  JVMType_Int16.cpp  JVMType_Int32.cpp  JVMType_Int64.cpp  JVMType_Int8.cpp
modules/jvm/tester/: CMakeLists.txt  main.cpp
modules/jvm/tests/: t_jvm_class_field_access.cpp  t_jvm_class_lookup.cpp  t_jvm_constructor_lookup.cpp  t_jvm_external_jar.cpp  t_jvm_generic_class_lookup.cpp  t_jvm_object_creation.cpp  t_jvm_primitive_type_lookup.cpp  t_jvm_startup.cpp  t_jvm_static_method_execution_no_parameters.cpp  t_jvm_static_method_execution_with_parameters.cpp  t_jvm_static_method_lookup.cpp  t_jvm_type_wrapper.cpp
modules/jvm/tests_jar/: pom.xml
modules/jvm/tests_jar/src/main/java/com/nigiri/: Point.java
src/generic/: JVMInternalWrappers.cpp  nigiri.cpp
src/unix/: nigiri_unix.cpp
src/win32/: nigiri_win32.cpp
